added notes for readability and organization, also added comments to explain the purpose of certain functions and code blocks in the history.js file, as well as some general notes about HTTP errors, setTimeout, and promises in JavaScript while following along in class.

--- a/index.html
+++ b/index.html
@@ -35,3 +35,11 @@
   <script type="module" src="./index.js"></script>
 </body>
 </html>
+<!--HTTP Cat are errors you can get and this is where API's are applicable and is effected by many factors-->
+<!--set timeout is a JS function that delays execution of code for a specified number of milliseconds-->
+<!--this is used to simulate loading time when navigating to the transaction page, it shows a loading message for 1 second before redirecting to the transaction page-->
+<!--API is promises and helps keep the code organized and clean by handling asynchronous operations more effectively -->
+<!--Promises are always going to have a resolve and reject function, in that order -->
+<!-- ex const pizzaPromise = new Promise((resolve, reject) => { 
+resolve('Pizza is ready!'); //you can set the resolve or reject to a button click or any other event to determine when the promise is fulfilled or rejected.
+}); -->
