updated colors to my second favorite colors, teal and light blue. Apparently AI likes purple like I do, but I wanted to change it up a bit so it wasn't just seen as AI and my work would be seen as my own. I have AI help me but I understand how to correct and edit the code it gives me so I can make it my own and learn from it. I understand that using ai as a tool is benifical to my learning and I am not just copying and pasting code without understanding it. So i wanted to reflect that even if it is a small change of using a different color scheme to show that I comprehend the code and adapt to change.

--- a/index.html
+++ b/index.html
@@ -47,3 +47,5 @@ resolve('Pizza is ready!'); //you can set the resolve or reject to a button clic
 <!--.catch is to handle errors in a promise chain, it is called when a promise is rejected.-->
 <!--.finally is used to execute code after a promise is settled, regardless of whether it was resolved or rejected.-->
 <!--this is useful for cleanup tasks or actions that should happen after a promise is completed, such as hiding a loading spinner or resetting form fields.-->
+<!--apparently AI likes purple like I do so I will need to use colors that aren't purple in the future to be sure my efforts aren't mistaken
+ for just AI salad tossed together-->
