--- a/transactionPage/transaction.html
+++ b/transactionPage/transaction.html
@@ -38,6 +38,15 @@
         </div>
 
         <div class="form-group">
+          <label for="budget">Budget Limit</label>
+          <input type="number" id="budget" name="budget" step="0.01" min="0" placeholder="0.00">
+        </div>
+
+        <div id="overdraftWarning" class="overdraft-warning" style="display: none; color: red; font-weight: bold; margin-bottom: 1rem;">
+          You are exceeding your budget!
+        </div>
+
+        <div class="form-group">
           <label for="date">Date</label>
           <input type="date" id="date" name="date" required>
         </div>
