added a chart to the dashboard made the chart update when a new transaction is added added a clear form when swapping between income and expense

--- a/index.html
+++ b/index.html
@@ -27,12 +27,18 @@
       </div>
     </div>
     
+    <div class="chart-container">
+      <h2>Transaction Overview</h2>
+      <canvas id="transactionChart"></canvas>
+    </div>
+    
     <div class="actions">
       <button id="addTransactionBtn" class="btn btn-primary">Add Transaction</button>
       <button id="transactionHistoryBtn" class="btn btn-secondary">Transaction History</button>
     </div>
   </div>
   <script type="module" src="./index.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
 <!--HTTP Cat are errors you can get and this is where API's are applicable and is effected by many factors-->
