I had AI pull logic from code already made by others to build a reactive currency exchange selector that updates the financial overview and transaction history based on the selected currency. I had it update the html and css to make the selector look good and be functional. I reviewed the code and it makes sense to me and works as intended. I will continue to test and make adjustments as needed.

--- a/history/history.html
+++ b/history/history.html
@@ -15,6 +15,22 @@
         <a href="../index.html" class="btn btn-secondary">Back to Dashboard</a>
       </div>
 
+      <div class="currency-selector">
+        <label for="currencySelect">Display Currency:</label>
+        <select id="currencySelect">
+          <option value="USD">US Dollar ($)</option>
+          <option value="EUR">Euro (€)</option>
+          <option value="GBP">British Pound (£)</option>
+          <option value="JPY">Japanese Yen (¥)</option>
+          <option value="CAD">Canadian Dollar (C$)</option>
+          <option value="AUD">Australian Dollar (A$)</option>
+          <option value="CHF">Swiss Franc (CHF)</option>
+          <option value="CNY">Chinese Yuan (¥)</option>
+          <option value="INR">Indian Rupee (₹)</option>
+          <option value="MXN">Mexican Peso ($)</option>
+        </select>
+      </div>
+
       <div class="history-controls">
         <div class="filter-group">
           <label for="filterType">Filter by Type:</label>
