--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
   <div id="app">
     <h1>Finance Dashboard</h1>
     
+    <div class="currency-selector">
+      <label for="currencySelect">Display Currency:</label>
+      <select id="currencySelect">
+        <option value="USD">US Dollar ($)</option>
+        <option value="EUR">Euro (€)</option>
+        <option value="GBP">British Pound (£)</option>
+        <option value="JPY">Japanese Yen (¥)</option>
+        <option value="CAD">Canadian Dollar (C$)</option>
+        <option value="AUD">Australian Dollar (A$)</option>
+        <option value="CHF">Swiss Franc (CHF)</option>
+        <option value="CNY">Chinese Yuan (¥)</option>
+        <option value="INR">Indian Rupee (₹)</option>
+        <option value="MXN">Mexican Peso ($)</option>
+      </select>
+    </div>
+    
     <div class="financial-overview">
       <div class="card">
         <h2>Total Income</h2>
