--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard/Homepage</title>
+  <title>Budget Homepage</title>
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <div id="app">
-    <h1>Finance Dashboard</h1>
+    <h1>Budget For Life</h1>
     
     <div class="currency-selector">
       <label for="currencySelect">Display Currency:</label>
