added recurring transaction functionality, allowing users to set transactions to repeat every X days. The system will automatically generate new transactions based on the specified interval, ensuring that recurring expenses and incomes are tracked without manual input each time. This enhancement improves the usability of the application for users with regular financial activities. I had AI handle the date calculations and transaction generation logic, which simplified the implementation and ensured accuracy in handling various edge cases (like month-end transitions). especially since dates are a bit of a pain to work with in JavaScript.

--- a/transactionPage/transaction.html
+++ b/transactionPage/transaction.html
@@ -50,7 +50,10 @@
           <label for="date">Date</label>
           <input type="date" id="date" name="date" required>
         </div>
-
+        <div class="form-group">
+          <label for="reoccuring">Reoccuring (Days)</label>
+          <input type="number" id="reoccuring" name="reoccuring" step="1" min="0" placeholder="0">
+        </div>
         <div class="form-group">
           <label for="notes">Notes (Optional)</label>
           <textarea id="notes" name="notes" placeholder="Add any notes about this transaction..." rows="4"></textarea>
