added budget page for budget limits and made it so it stores that budget in local storage to be edited at the users convenience or kept as they set it initally and to subtract expenses from the budget and show the user how much of their budget they have left.

--- a/history/history.html
+++ b/history/history.html
@@ -12,7 +12,10 @@
     <div class="history-container">
       <div class="history-header">
         <h1>Transaction History</h1>
-        <a href="../index.html" class="btn btn-secondary">Back to Dashboard</a>
+        <div style="display: flex; gap: 0.5rem;">
+          <a href="../budgetPage/budget.html" class="btn btn-secondary">Manage Budgets</a>
+          <a href="../index.html" class="btn btn-secondary">Back to Dashboard</a>
+        </div>
       </div>
 
       <div class="currency-selector">
