--- a/transactionPage/transaction.html
+++ b/transactionPage/transaction.html
@@ -12,7 +12,10 @@
     <div class="transaction-container">
       <div class="transaction-header">
         <h1>Add Transaction</h1>
-        <a href="../index.html" class="btn btn-secondary">Back to Dashboard</a>
+        <div style="display: flex; gap: 0.5rem;">
+          <a href="../budgetPage/budget.html" class="btn btn-secondary">Manage Budgets</a>
+          <a href="../index.html" class="btn btn-secondary">Back to Dashboard</a>
+        </div>
       </div>
 
       <form id="transactionForm" class="transaction-form">
