--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <div class="actions">
       <button id="addTransactionBtn" class="btn btn-primary">Add Transaction</button>
       <button id="transactionHistoryBtn" class="btn btn-secondary">Transaction History</button>
+      <button id="budgetManagementBtn" class="btn btn-secondary">Manage Budgets</button>
     </div>
   </div>
   <script type="module" src="./index.js"></script>
