added debt category to transaction type dropdown, added total debt and remaining balance without debt expense cards to index.html, styled total debt in red in index.css, updated imports in transaction.js and history.js to include new constants, removed redundant constant declarations in transaction.js and history.js.

--- a/transactionPage/transaction.html
+++ b/transactionPage/transaction.html
@@ -25,6 +25,8 @@
             <option value="">Select Type</option>
             <option value="income">Income</option>
             <option value="expense">Expense</option>
+            <option value="debt">Debt Added</option>
+            <option value="debtPayment">Debt Payment</option>
           </select>
         </div>
 
