--- a/index.html
+++ b/index.html
@@ -36,13 +36,16 @@
         <h2>Total Expenses</h2>
         <p id="totalExpenses" class="amount">$0.00</p>
       </div>
+      <div class="card">
+        <h2>Total Debt</h2>
+        <p id="totalDebt" class="amount">$0.00</p>
+      </div>
       
       <div class="card">
-        <h2>Remaining Balance</h2>
+        <h2>Remaining Balance Without Debt Expense</h2>
         <p id="remainingBalance" class="amount">$0.00</p>
       </div>
     </div>
-    
     <div class="chart-container">
       <h2>Transaction Overview</h2>
       <canvas id="transactionChart"></canvas>
