--- a/budgetPage/budget.html
+++ b/budgetPage/budget.html
@@ -13,6 +13,13 @@
       <div class="budget-header">
         <h1>Budget Management</h1>
         <a href="../index.html" class="btn btn-secondary">Back to Dashboard</a>
+          <div class="budget-form">
+            <select id="categoryInput">
+              <option value="">Select Category</option>
+            </select>
+            <input type="number" id="amountInput" placeholder="Budget Amount">
+            <button id="addBudgetBtn" class="btn btn-primary">Add Budget</button>
+          </div>
       </div>
 
       <div class="budget-info">
