--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   </div>
   <script type="module" src="./index.js"></script>
-  <script type="module" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/npm/chart.js" loading="lazy"></script>
 </body>
 </html>
 <!--HTTP Cat are errors you can get and this is where API's are applicable and is effected by many factors-->
