Fixed a debt payment issue bug so it actually subtracted from the current balance while not showing the larger debt refelcted in the balance but still showing as a separate debt amount.

--- a/history/history.html
+++ b/history/history.html
@@ -41,6 +41,8 @@
             <option value="">All Transactions</option>
             <option value="income">Income</option>
             <option value="expense">Expense</option>
+            <option value="debt">Debt</option>
+            <option value="debtPayment">Debt Payment</option>
           </select>
         </div>
         <button id="clearHistoryBtn" class="btn btn-danger">Clear All History</button>
