added date tracking for first income entry, cleared on reset, and displayed on main page added css for date display made sure date tracking is only set on first income entry, not on expenses or recurring transactions

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <option value="MXN">Mexican Peso ($)</option>
       </select>
     </div>
-    
+      <div class = "date">
+        <h2 id="beginningInputDate"></h2>
+      </div>
     <div class="financial-overview">
       <div class="card">
         <h2>Total Income</h2>
