Had AI help me implement the following features: - Added a .gitignore file to exclude node_modules and other unnecessary files from being tracked by Git. - Created a CAPACITOR_SETUP.md file with instructions on how to set up Capacitor for the project. - Created a capacitor.config.ts file to configure Capacitor for the project. - Updated the package.json file to include new dependencies and scripts. - Created a privacy-policy.html file to outline the privacy policy for the project. - Created a terms-of-service.html file to outline the terms of service for the project.
This way I can publish the project on the app stores without any legal issues
and ensure that the project is properly set up for development with Capacitor.

--- a/budgetPage/budget.html
+++ b/budgetPage/budget.html
@@ -34,6 +34,15 @@
         Budget updated successfully!
       </div>
     </div>
+    
+    <footer class="app-footer">
+      <p>&copy; 2026 Budget For Life. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="../privacy-policy.html">Privacy Policy</a>
+        <span class="separator">|</span>
+        <a href="../terms-of-service.html">Terms of Service</a>
+      </div>
+    </footer>
   </div>
 
   <script type="module" src="./budget.js"></script>
