--- a/history/history.html
+++ b/history/history.html
@@ -52,6 +52,15 @@
         <p class="no-transactions">No transactions yet</p>
       </div>
     </div>
+    
+    <footer class="app-footer">
+      <p>&copy; 2026 Budget For Life. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="../privacy-policy.html">Privacy Policy</a>
+        <span class="separator">|</span>
+        <a href="../terms-of-service.html">Terms of Service</a>
+      </div>
+    </footer>
   </div>
 
   <script type="module" src="./history.js"></script>
