--- a/index.html
+++ b/index.html
@@ -58,6 +58,15 @@
       <button id="transactionHistoryBtn" class="btn btn-secondary">Transaction History</button>
       <button id="budgetManagementBtn" class="btn btn-secondary">Manage Budgets</button>
     </div>
+    
+    <footer class="app-footer">
+      <p>&copy; 2026 Budget For Life. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="privacy-policy.html">Privacy Policy</a>
+        <span class="separator">|</span>
+        <a href="terms-of-service.html">Terms of Service</a>
+      </div>
+    </footer>
   </div>
   <script type="module" src="./index.js"></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/chart.js" loading="lazy"></script>
