--- a/transactionPage/transaction.html
+++ b/transactionPage/transaction.html
@@ -84,6 +84,15 @@
         Transaction saved successfully!
       </div>
     </div>
+    
+    <footer class="app-footer">
+      <p>&copy; 2026 Budget For Life. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="../privacy-policy.html">Privacy Policy</a>
+        <span class="separator">|</span>
+        <a href="../terms-of-service.html">Terms of Service</a>
+      </div>
+    </footer>
   </div>
 
   <script type="module" src="./transaction.js"></script>
