--- a/history/history.html
+++ b/history/history.html
@@ -51,6 +51,34 @@
       <div id="transactionsList" class="transactions-list">
         <p class="no-transactions">No transactions yet</p>
       </div>
+
+      <!-- Edit Transaction Modal -->
+      <div id="editModal" class="modal" style="display: none;">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h2>Edit Transaction</h2>
+            <button class="modal-close" id="closeEditModal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="editCategory">Category</label>
+              <select id="editCategory" required></select>
+            </div>
+            <div class="form-group">
+              <label for="editAmount">Amount</label>
+              <input type="number" id="editAmount" step="0.01" min="0" placeholder="0.00" required>
+            </div>
+            <div class="form-group">
+              <label for="editNotes">Notes (Optional)</label>
+              <textarea id="editNotes" placeholder="Add any notes about this transaction..." rows="3"></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" id="cancelEditBtn">Cancel</button>
+            <button class="btn btn-primary" id="saveEditBtn">Save Changes</button>
+          </div>
+        </div>
+      </div>
     </div>
     
     <footer class="app-footer">
