--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -56,6 +56,7 @@
       border-left: 4px solid #ffc107;
       padding: 1rem;
       margin: 1rem 0;
+      color: #c41c3b;
     }
   </style>
 </head>
